--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,15 +5,26 @@ Authors@R:
     person(given = "Corrado",
            family = "Lanera",
            role = c("aut", "cre"),
-           email = "corrado.lanera@gmail.com"
-    )
-Description: The goal of the package `equationer` is to implement an
-    environment to consistently generate the estimations from the
-    equations reported in the paper "Review of Equations of Energy
-    Requirements" by the *Unit of Biostatistcs, Epidemiology and Public
+           email = "corrado.lanera@gmail.com")
+Description: The goal of the package `equationer` is to
+    implement an environment to consistently generate the estimations from
+    the equations reported in the paper "Review of Equations of Energy
+    Requirements" by the *Unit of Biostatistics, Epidemiology and Public
     Health* of the University of Padova.
 License: GPL-3
-Encoding: UTF-8
-LazyData: true
 URL: https://github.com/UBESP-DCTV/equationer
 BugReports: https://github.com/UBESP-DCTV/equationer/issues
+Depends: 
+    R (>= 3.1)
+Imports: 
+    magrittr (>= 1.5),
+    tibble (>= 2.1.1)
+Suggests: 
+    covr (>= 3.2.1),
+    spelling (>= 2.1),
+    testthat (>= 2.0.1)
+Encoding: UTF-8
+Language: en-US
+LazyData: true
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 6.1.1
