--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,16 @@ Depends:
     R (>= 3.1)
 Imports: 
     magrittr (>= 1.5),
-    tibble (>= 2.1.1)
+    tibble (>= 2.1.1),
+    rlang (>= 0.3.3),
+    assertive (>= 0.3.5),
+    glue (>= 1.3.1),
+    clipr (>= 0.5.0),
+    fs (>= 1.2.7),
+    crayon (>= 1.3.4),
+    utils,
+    here (>= 0.1),
+    clisymbols (>= 1.2.0)
 Suggests: 
     covr (>= 3.2.1),
     spelling (>= 2.1),
