is_applicable_to_covset.eq() (#1)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,13 @@ S3method(get_covariates,eq)
 S3method(get_name,eq)
 S3method(get_outcome,eq)
 S3method(get_stratum,eq)
+S3method(is_applicable_to_covset,eq)
 export("%>%")
 export(eq)
 export(get_covariates)
 export(get_name)
 export(get_outcome)
 export(get_stratum)
+export(is_applicable_to_covset)
 importFrom(magrittr,"%>%")
 importFrom(tibble,tibble)
