--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,10 +7,10 @@ Authors@R:
            role = c("aut", "cre"),
            email = "corrado.lanera@gmail.com")
 Description: The goal of the package `equationer` is to
-    implement an environment to consistently generate the estimations from
-    the equations reported in the paper "Review of Equations of Energy
-    Requirements" by the *Unit of Biostatistics, Epidemiology and Public
-    Health* of the University of Padova.
+    implement an environment to consistently generate the estimations
+    from the equations reported in the paper "Review of Equations of
+    Energy Requirements" by the *Unit of Biostatistics, Epidemiology and
+    Public Health* of the University of Padova.
 License: GPL-3
 URL: https://github.com/UBESP-DCTV/equationer
 BugReports: https://github.com/UBESP-DCTV/equationer/issues
@@ -27,7 +27,9 @@ Imports:
     crayon (>= 1.3.4),
     utils,
     here (>= 0.1),
-    clisymbols (>= 1.2.0)
+    clisymbols (>= 1.2.0),
+    purrr,
+    stringr
 Suggests: 
     covr (>= 3.2.1),
     spelling (>= 2.1),
