tidy evaluation support

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,12 +7,39 @@ S3method(get_outcome,eq)
 S3method(get_stratum,eq)
 S3method(is_applicable_to_covset,eq)
 export("%>%")
+export(.data)
+export(enexpr)
+export(enexprs)
+export(enquo)
+export(enquos)
+export(ensym)
+export(ensyms)
 export(eq)
 export(evaluate_at)
+export(expr)
 export(get_covariates)
 export(get_name)
 export(get_outcome)
 export(get_stratum)
 export(is_applicable_to_covset)
+export(quo)
+export(quo_name)
+export(quos)
+export(sym)
+export(syms)
 importFrom(magrittr,"%>%")
+importFrom(rlang,.data)
+importFrom(rlang,enexpr)
+importFrom(rlang,enexprs)
+importFrom(rlang,enquo)
+importFrom(rlang,enquos)
+importFrom(rlang,ensym)
+importFrom(rlang,ensyms)
+importFrom(rlang,expr)
+importFrom(rlang,exprs)
+importFrom(rlang,quo)
+importFrom(rlang,quo_name)
+importFrom(rlang,quos)
+importFrom(rlang,sym)
+importFrom(rlang,syms)
 importFrom(tibble,tibble)
