--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ S3method(evaluate_at,eq)
 S3method(get_covariates,eq)
 S3method(get_name,eq)
 S3method(get_outcome,eq)
-S3method(get_stratum,eq)
+S3method(get_strata,eq)
 S3method(is_applicable_to_covset,eq)
 export("%>%")
 export(.data)
@@ -15,12 +15,13 @@ export(enquos)
 export(ensym)
 export(ensyms)
 export(eq)
+export(eqs)
 export(evaluate_at)
 export(expr)
 export(get_covariates)
 export(get_name)
 export(get_outcome)
-export(get_stratum)
+export(get_strata)
 export(is_applicable_to_covset)
 export(quo)
 export(quo_name)
