--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,16 @@
 
 S3method(evaluate_at,eq)
 S3method(get_covariates,eq)
+S3method(get_covariates,eqs)
+S3method(get_eq_names,eqs)
 S3method(get_name,eq)
+S3method(get_name,eqs)
 S3method(get_outcome,eq)
+S3method(get_outcome,eqs)
+S3method(get_reference,default)
+S3method(get_reference,eqs)
 S3method(get_strata,eq)
+S3method(get_strata,eqs)
 S3method(is_applicable_to_covset,eq)
 export("%>%")
 export(.data)
@@ -19,8 +26,10 @@ export(eqs)
 export(evaluate_at)
 export(expr)
 export(get_covariates)
+export(get_eq_names)
 export(get_name)
 export(get_outcome)
+export(get_reference)
 export(get_strata)
 export(is_applicable_to_covset)
 export(quo)
