is_applicable_to_covset.eqs() (#2)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ S3method(get_reference,eqs)
 S3method(get_strata,eq)
 S3method(get_strata,eqs)
 S3method(is_applicable_to_covset,eq)
+S3method(is_applicable_to_covset,eqs)
 export("%>%")
 export(.data)
 export(enexpr)
