--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,6 +21,7 @@ Imports:
     clipr (>= 0.5.0),
     clisymbols (>= 1.2.0),
     crayon (>= 1.3.4),
+    dplyr (>= 0.8.0.1),
     fs (>= 1.2.7),
     glue (>= 1.3.1),
     here (>= 0.1),
@@ -29,13 +30,12 @@ Imports:
     rlang (>= 0.1.2),
     stringr (>= 1.4.0),
     tibble (>= 2.1.1),
-    utils,
-    dplyr (>= 0.8.0.1)
+    utils
 Suggests: 
     covr (>= 3.2.1),
+    roxygen2 (>= 6.1.1),
     spelling (>= 2.1),
-    testthat (>= 2.0.1),
-    roxygen2 (>= 6.1.1)
+    testthat (>= 2.0.1)
 Encoding: UTF-8
 Language: en-US
 LazyData: true
