--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,8 @@ Imports:
     rlang (>= 0.1.2),
     stringr (>= 1.4.0),
     tibble (>= 2.1.1),
-    utils
+    utils,
+    readr (>= 1.3.1)
 Suggests: 
     covr (>= 3.2.1),
     roxygen2 (>= 6.1.1),
