--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,15 +4,22 @@ S3method(evaluate_at,eq)
 S3method(evaluate_at,eqs)
 S3method(get_covariates,eq)
 S3method(get_covariates,eqs)
+S3method(get_covariates,eqs_bag)
 S3method(get_eq_names,eqs)
+S3method(get_last_update,default)
+S3method(get_last_update,eqs_bag)
 S3method(get_name,eq)
 S3method(get_name,eqs)
+S3method(get_name,eqs_bag)
 S3method(get_outcome,eq)
 S3method(get_outcome,eqs)
+S3method(get_outcome,eqs_bag)
 S3method(get_reference,default)
 S3method(get_reference,eqs)
+S3method(get_reference,eqs_bag)
 S3method(get_strata,eq)
 S3method(get_strata,eqs)
+S3method(get_strata,eqs_bag)
 S3method(is_applicable_to_covset,eq)
 S3method(is_applicable_to_covset,eqs)
 export("%>%")
@@ -30,6 +37,7 @@ export(evaluate_at)
 export(expr)
 export(get_covariates)
 export(get_eq_names)
+export(get_last_update)
 export(get_name)
 export(get_outcome)
 export(get_reference)
