--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,7 +31,8 @@ Imports:
     stringr (>= 1.4.0),
     tibble (>= 2.1.1),
     utils,
-    readr (>= 1.3.1)
+    readr (>= 1.3.1),
+    lubridate
 Suggests: 
     covr (>= 3.2.1),
     roxygen2 (>= 6.1.1),
