print and README updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,9 @@ S3method(get_strata,eqs)
 S3method(get_strata,eqs_bag)
 S3method(is_applicable_to_covset,eq)
 S3method(is_applicable_to_covset,eqs)
+S3method(print,eq)
+S3method(print,eqs)
+S3method(print,eqs_bag)
 S3method(which_are_applicable_to_covset,eqs_bag)
 export("%>%")
 export(.data)
